<resources>
    <string name="app_name">Droidrush_Quiz_app</string>
    <string name="admin_login">Admin Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="not_an_admin_go_back_to">NOT AN ADMIN GO BACK TO</string>
    <string name="students_login">Students Login</string>
    <string name="teachers_login">teachers Login</string>
    <string name="logo">logo</string>
    <string name="e_mail">E-mail</string>
    <string name="droidrush_quiz_app_for_avishkar_2020">Droidrush Quiz App for Avishkar 2020</string>

</resources>