<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLoginActivity"
    android:orientation="vertical"
    android:background="@drawable/back">



    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="150dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#DCE6BFBF"
        android:fontFamily="@font/amaranth_bold"
        android:gravity="center"
        android:text="@string/admin_login"
        android:textAllCaps="true"
        android:textColor="#DA4F4388"
        android:textSize="30sp" />
    <EditText
        android:layout_width="300dp"
        android:gravity="center"
        android:drawableStart="@drawable/userx"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:textColorHint="#DCC744"
        android:background="#ffffff"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:inputType="none" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:textColorHint="#DCC744"
        android:drawableStart="@drawable/passx"
        android:background="#ffffff"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:autofillHints="" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#C347AE30"
        android:fontFamily="@font/arbutus"
        android:text="@string/login"
        android:textSize="25sp" />
    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/not_an_admin_go_back_to"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="#F2FDFB"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/students_login"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:background="#EDB48A"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/teachers_login"
        android:background="#EDB48A"
        android:layout_marginTop="-50dp"
        android:layout_marginStart="220dp"
        />


</LinearLayout>